Update slide titles and content for clarity

--- a/piascare.html
+++ b/piascare.html
@@ -181,7 +181,7 @@
             </div>
         </div>
 
-        <!-- スライド2: 当日の注意点 -->
+        <!-- スライド2: 当日の注意点は？ -->
         <div class="slide" data-duration="8000" data-text="当日の注意点です。ピアスを開けた当日は、ピアスホールを刺激しないように、パーマやプールは控えてください。">
             <div class="card">
                 <div class="slide-label">
@@ -204,31 +204,31 @@
             </div>
         </div>
 
-        <!-- スライド3: 内服薬 -->
-        <div class="slide" data-duration="10000" data-text="処方された内服を1日3回、毎食後に、5日間飲み切ってください。なお、抗生物質を飲んで、体調が悪くなったことがある方は必ずスタッフに相談してください。">
+        <!-- スライド3: 内服薬（抗生物質）について -->
+        <div class="slide" data-duration="10000" data-text="処方された内服薬を1日3回、毎食後に、5日間飲み切ってください。なお、抗生物質を飲んで、体調が悪くなったことがある方は必ずスタッフに相談してください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">お薬（飲み薬）</span>
+                    <span class="slide-label-text">内服薬について</span>
                 </div>
                 <div class="content-main">
-                    <p class="text-xl text-slate-400 mb-4 font-bold">サワシリン または ケフラール</p>
+                    <p class="text-xl text-slate-400 mb-4 font-bold">抗生物質</p>
                     <div class="bg-emerald-50/50 rounded-3xl p-10 border border-emerald-100 text-center">
                         <div class="text-6xl font-black text-emerald-800 mb-4">1日 3回 × 5日間</div>
                         <p class="text-xl font-bold text-slate-600">毎食後、最後まで飲み切ってください</p>
                     </div>
                     <div class="mt-8 flex items-center gap-3 text-rose-500 font-bold bg-rose-50 p-4 rounded-xl">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 9v4m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 17c-.77 1.333.192 3 1.732 3z"/></svg>
-                        アレルギーのある方は、必ずお申し出ください
+                        副作用のある方は、必ずお申し出ください
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- スライド4: 外用薬 -->
-        <div class="slide" data-duration="8000" data-text="これからお渡しする外用薬は毎日お風呂上がりに、4週間継続して使用してください。">
+        <!-- スライド4: 外用薬について -->
+        <div class="slide" data-duration="8000" data-text="外用薬は毎日お風呂上がりに、4週間継続して使用してください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">お薬（塗り薬）</span>
+                    <span class="slide-label-text">外用薬（塗り薬）</span>
                 </div>
                 <div class="content-main">
                     <div class="flex items-center justify-between bg-slate-50 p-12 rounded-3xl border border-slate-100">
@@ -249,7 +249,7 @@
         <div class="slide" data-duration="11000" data-text="シャワーの際は、ボディソープをよく泡立て、耳をやさしく洗ってください。その後、泡が残らないようしっかり洗い流しましょう。そのときにピアスを前後に動かしながらシャワーをかけると、ホール内部の汚れも落ちやすくなります。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">毎日の洗浄</span>
+                    <span class="slide-label-text">毎日のお手入れ 1｜シャワー編（）</span>
                 </div>
                 <div class="content-main">
                     <div class="flex items-center gap-12">
@@ -276,7 +276,7 @@
         <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、ピアスホールの前後に薬を塗って、ピアスをゆっくり前後に動かして、薬をなじませてください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">お薬の塗り方</span>
+                    <span class="slide-label-text">毎日のお手入れ 2｜お薬の塗り方</span>
                 </div>
                 <div class="content-main space-y-8">
                     <div class="grid grid-cols-2 gap-6">
