Update slide labels for clarity in piascare.html

--- a/piascare.html
+++ b/piascare.html
@@ -249,7 +249,7 @@
         <div class="slide" data-duration="11000" data-text="シャワーの際は、ボディソープをよく泡立て、耳をやさしく洗ってください。その後、泡が残らないようしっかり洗い流しましょう。そのときにピアスを前後に動かしながらシャワーをかけると、ホール内部の汚れも落ちやすくなります。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">毎日のお手入れ 1｜シャワー編（）</span>
+                    <span class="slide-label-text">毎日のお手入れ 1｜シャワー編</span>
                 </div>
                 <div class="content-main">
                     <div class="flex items-center gap-12">
@@ -276,7 +276,7 @@
         <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、ピアスホールの前後に薬を塗って、ピアスをゆっくり前後に動かして、薬をなじませてください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">毎日のお手入れ 2｜お薬の塗り方</span>
+                    <span class="slide-label-text">毎日のお手入れ 2｜外用薬の塗り方編</span>
                 </div>
                 <div class="content-main space-y-8">
                     <div class="grid grid-cols-2 gap-6">
@@ -314,7 +314,7 @@
         <div class="slide" data-duration="8000" data-text="もし赤みや痛み、腫れなどの異常を感じた場合は、早めに受診してください。お疲れ様でした。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">異常を感じたとき</span>
+                    <span class="slide-label-text">異常を感じたときは？</span>
                 </div>
                 <div class="content-main items-center">
                     <div class="w-full bg-rose-50 border border-rose-100 p-10 rounded-3xl text-center mb-10">
