Update slide labels for clarity in piascare.html

--- a/piascare.html
+++ b/piascare.html
@@ -185,7 +185,7 @@
         <div class="slide" data-duration="8000" data-text="当日の注意点です。ピアスを開けた当日は、ピアスホールを刺激しないように、パーマやプールは控えてください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">当日の注意点</span>
+                    <span class="slide-label-text">当日の注意点は？</span>
                 </div>
                 <div class="content-main">
                     <div class="flex items-center justify-around">
@@ -228,7 +228,7 @@
         <div class="slide" data-duration="8000" data-text="外用薬は毎日お風呂上がりに、4週間継続して使用してください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">外用薬（塗り薬）</span>
+                    <span class="slide-label-text">外用薬（塗り薬）について</span>
                 </div>
                 <div class="content-main">
                     <div class="flex items-center justify-between bg-slate-50 p-12 rounded-3xl border border-slate-100">
