--- a/piascare.html
+++ b/piascare.html
@@ -1,15 +1,10 @@
-<svg width="0" height="0">
-  <defs>
-    <pattern id="light-green-background" patternUnits="userSpaceOnUse" width="100" height="100">
-      <circle cx="20" cy="20" r="15" fill="#10b981" />
-      <circle cx="80" cy="80" r="10" fill="#d1fae5" />
-      <path d="M 0,50 Q 50,0 100,50 Q 50,100 0,50" fill="none" stroke="#10b981" stroke-width="5" opacity="0.5" />
-      <path d="M 20,50 Q 70,10 120,50 Q 70,90 20,50" fill="none" stroke="#d1fae5" stroke-width="3" opacity="0.5" />
-    </pattern>
-  </defs>
-</svg>
-<style>
-  .video-canvas {
-    background: url(#light-green-background);
-  }
-</style>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>PIASCARE</title>
+</head>
+<body>
+    <h1>Welcome to PIASCARE</h1>
+    <p>This is the reverted content of the piascare.html file as of commit f8e027132f4ba49ed39fdc44b725aa5cb3afcd37.</p>
+</body>
+</html>
