--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
         </div>
 
-        <!-- スライド2: 当日の注意点 -->
+        <!-- スライド2: 当日の注意点は？ -->
         <div class="slide" data-duration="8000" data-text="当日の注意点です。ピアスを開けた当日は、ピアスホールを刺激しないように、パーマやプールは控えてください。">
             <div class="card">
                 <div class="slide-label">
@@ -209,33 +209,34 @@
         <div class="slide" data-duration="10000" data-text="処方された内服を1日3回、毎食後に、5日間飲み切ってください。なお、抗生物質を飲んで、体調が悪くなったことがある方は必ずスタッフに相談してください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">お薬（飲み薬）</span>
+                    <span class="slide-label-text">内服薬について</span>
                 </div>
                 <div class="content-main">
-                    <p class="text-xl text-slate-400 mb-4 font-bold">サワシリン または ケフラール</p>
+                    <p class="text-xl text-slate-400 mb-4 font-bold">内服薬をお渡しします</p>
                     <div class="bg-emerald-50/50 rounded-3xl p-10 border border-emerald-100 text-center">
                         <div class="text-6xl font-black text-emerald-800 mb-4">1日 3回 × 5日間</div>
                         <p class="text-xl font-bold text-slate-600">毎食後、最後まで飲み切ってください</p>
                     </div>
                     <div class="mt-8 flex items-center gap-3 text-rose-500 font-bold bg-rose-50 p-4 rounded-xl">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 9v4m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 17c-.77 1.333.192 3 1.732 3z"/></svg>
-                        アレルギーのある方は、必ずお申し出ください
+                        抗生物質に副作用のある方は、必ずお申し出ください
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- スライド4: 外用薬 -->
-        <div class="slide" data-duration="8000" data-text="これからお渡しする外用薬は毎日お風呂上がりに、4週間継続して使用してください。">
+        <div class="slide" data-duration="8000" data-text="お渡しする外用薬は毎日お風呂上がりに、4週間継続して使用してください。">
+                <p class="text-xl text-slate-400 mb-4 font-bold">外用薬もが処方されます</p>
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">お薬（塗り薬）</span>
+                    <span class="slide-label-text">外用薬について</span>
                 </div>
                 <div class="content-main">
                     <div class="flex items-center justify-between bg-slate-50 p-12 rounded-3xl border border-slate-100">
                         <div class="text-left">
                             <h3 class="text-2xl font-bold text-slate-500 mb-2">フシジンレオ軟膏</h3>
-                            <p class="text-4xl font-black text-slate-800">入浴後に毎日塗布</p>
+                            <p class="text-4xl font-black text-slate-800">入浴後に毎日塗布してください</p>
                         </div>
                         <div class="text-7xl">🧴</div>
                     </div>
@@ -250,13 +251,13 @@
         <div class="slide" data-duration="11000" data-text="シャワーの際は、ボディソープをよく泡立て、耳をやさしく洗ってください。その後、泡が残らないようしっかり洗い流しましょう。そのときにピアスを前後に動かしながらシャワーをかけると、ホール内部の汚れも落ちやすくなります。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">毎日の洗浄</span>
+                    <span class="slide-label-text">毎日のお手入れ（シャワー編）</span>
                 </div>
                 <div class="content-main">
                     <div class="flex items-center gap-12">
                         <div class="w-1/3 text-center">
                             <div class="text-9xl mb-4">🚿</div>
-                            <p class="font-bold text-slate-400">清潔なシャワーで</p>
+                            <p class="font-bold text-slate-400">シャワーで洗い流す</p>
                         </div>
                         <div class="w-2/3 space-y-6">
                             <div class="flex items-start gap-4 p-5 bg-emerald-50 rounded-2xl">
@@ -273,7 +274,7 @@
             </div>
         </div>
 
-        <!-- スライド6: お薬の塗り方 -->
+        <!-- スライド6: 毎日のお手入れ（薬の塗り方編） -->
         <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、ピアスホールの前後に薬を塗って、ピアスをゆっくり前後に動かして、薬をなじませてください。">
             <div class="card">
                 <div class="slide-label">
@@ -282,11 +283,11 @@
                 <div class="content-main space-y-8">
                     <div class="grid grid-cols-2 gap-6">
                         <div class="bg-white border border-slate-200 p-8 rounded-2xl shadow-sm">
-                            <div class="text-emerald-600 font-bold mb-2">準備</div>
+                            <div class="text-emerald-600 font-bold mb-2">外用薬を準備</div>
                             <p class="text-xl font-bold text-slate-700">綿棒でお薬をホールの<br>前後にのせる</p>
                         </div>
                         <div class="bg-white border-2 border-emerald-500 p-8 rounded-2xl shadow-sm">
-                            <div class="text-emerald-600 font-bold mb-2">仕上げ</div>
+                            <div class="text-emerald-600 font-bold mb-2">外用薬を塗布</div>
                             <p class="text-xl font-bold text-slate-800">ピアスをゆっくりと<br><span class="text-3xl font-black">前後に動かす</span></p>
                         </div>
                     </div>
