--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="slide" data-duration="8000" data-text="当日の注意点です。ピアスを開けた当日は、ピアスホールを刺激しないように、パーマやプールは控えてください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">当日の注意点</span>
+                    <span class="slide-label-text">当日の注意点は？</span>
                 </div>
                 <div class="content-main">
                     <div class="flex items-center justify-around">
@@ -227,12 +227,12 @@
 
         <!-- スライド4: 外用薬 -->
         <div class="slide" data-duration="8000" data-text="お渡しする外用薬は毎日お風呂上がりに、4週間継続して使用してください。">
-                <p class="text-xl text-slate-400 mb-4 font-bold">外用薬もが処方されます</p>
             <div class="card">
                 <div class="slide-label">
                     <span class="slide-label-text">外用薬について</span>
                 </div>
                 <div class="content-main">
+                    <p class="text-xl text-slate-400 mb-4 font-bold">外用薬も処方されます</p>
                     <div class="flex items-center justify-between bg-slate-50 p-12 rounded-3xl border border-slate-100">
                         <div class="text-left">
                             <h3 class="text-2xl font-bold text-slate-500 mb-2">フシジンレオ軟膏</h3>
@@ -278,7 +278,7 @@
         <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、ピアスホールの前後に薬を塗って、ピアスをゆっくり前後に動かして、薬をなじませてください。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">お薬の塗り方</span>
+                    <span class="slide-label-text">毎日のお手入れ（薬の塗り方編）</span>
                 </div>
                 <div class="content-main space-y-8">
                     <div class="grid grid-cols-2 gap-6">
@@ -316,7 +316,7 @@
         <div class="slide" data-duration="8000" data-text="もし赤みや痛み、腫れなどの異常を感じた場合は、早めに受診してください。お疲れ様でした。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">異常を感じたとき</span>
+                    <span class="slide-label-text">異常を感じたら</span>
                 </div>
                 <div class="content-main items-center">
                     <div class="w-full bg-rose-50 border border-rose-100 p-10 rounded-3xl text-center mb-10">
