--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <div class="slide" data-duration="8000" data-text="もし赤みや痛み、腫れなどの異常を感じた場合は、早めに受診してください。お疲れ様でした。">
             <div class="card">
                 <div class="slide-label">
-                    <span class="slide-label-text">異常を感じたら</span>
+                    <span class="slide-label-text">異常を感じたら・・・</span>
                 </div>
                 <div class="content-main items-center">
                     <div class="w-full bg-rose-50 border border-rose-100 p-10 rounded-3xl text-center mb-10">
