--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ピアッシング・アフターケア動画ガイド</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-style>
+<style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap');
     
     body { 
