--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
                             <h3 class="text-2xl font-bold text-slate-500 mb-2">フシジンレオ軟膏</h3>
                             <p class="text-4xl font-black text-slate-800">入浴後に毎日塗布してください</p>
                         </div>
-                        <div class="text-7xl">🧴</div>
+                        <div class="w-32 h-32 flex items-center justify-center">
+                            <img src="ointment.png" alt="外用薬" class="max-w-full max-h-full object-contain">
+</div>
                     </div>
                     <p class="mt-10 text-3xl font-bold text-center text-slate-500">
                         期間の目安：<span class="text-slate-800 text-4xl">4週間継続</span>
