--- a/index.html
+++ b/index.html
@@ -133,31 +133,22 @@
 
         .icon-soft { color: #10b981; opacity: 0.8; }
         
-        /* 開始画面 */
-        #start-screen {
-            background: #f8fafc;
-            z-index: 100;
-        }
-
-        .btn-primary {
-            background: #059669;
-            box-shadow: 0 4px 14px rgba(5, 150, 105, 0.2);
-        }
-    </style>
-</head>
-<body>
-
-    <div id="start-screen" class="fixed inset-0 flex items-center justify-center">
-        <div class="text-center p-12 max-w-lg">
-            <div class="mb-8 text-7xl">👂</div>
-            <h1 class="text-3xl font-black mb-4 text-slate-800">ピアッシング後の<br>お手入れガイド</h1>
-            <p class="mb-10 text-slate-500 text-lg leading-relaxed">正しくケアを続けることで、<br>きれいなピアスホールが完成します。</p>
-            <button id="play-button" class="btn-primary text-white px-12 py-5 rounded-full text-xl font-bold transition-all transform hover:scale-105 active:scale-95 flex items-center gap-3 mx-auto">
-                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
-                動画を再生する
-            </button>
+<div id="start-screen" class="fixed inset-0 flex items-center justify-center">
+    <div class="text-center p-12 max-w-lg">
+        <div class="mb-8 flex justify-center">
+            <div class="w-48 h-48 rounded-full overflow-hidden bg-white shadow-inner flex items-center justify-center border-4 border-emerald-100">
+                <img src="face.png" alt="標準ピアスをつけた女性" class="w-full h-full object-cover">
+            </div>
         </div>
+        
+        <h1 class="text-3xl font-black mb-4 text-slate-800">ピアッシング後の<br>お手入れガイド</h1>
+        <p class="mb-10 text-slate-500 text-lg leading-relaxed">正しくケアを続けることで、<br>きれいなピアスホールが完成します。</p>
+        <button id="play-button" class="btn-primary text-white px-12 py-5 rounded-full text-xl font-bold transition-all transform hover:scale-105 active:scale-95 flex items-center gap-3 mx-auto">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
+            動画を再生する
+        </button>
     </div>
+</div>
 
     <div class="video-canvas">
         <div class="bg-deco" style="top: -200px; right: -200px;"></div>
