--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
 
     <div id="start-screen" class="fixed inset-0 flex items-center justify-center">
         <div class="text-center p-12 max-w-lg">
-            <div class="mb-8 text-7xl">👂</div>
+            <div class="w-32 h-32 flex items-center justify-center">
+                <img src="face.png" alt="横顔" class="max-w-full max-h-full object-contain">
+</div>
             <h1 class="text-3xl font-black mb-4 text-slate-800">ピアッシング後の<br>お手入れガイド</h1>
             <p class="mb-10 text-slate-500 text-lg leading-relaxed">正しくケアを続けることで、<br>きれいなピアスホールが完成します。</p>
             <button id="play-button" class="btn-primary text-white px-12 py-5 rounded-full text-xl font-bold transition-all transform hover:scale-105 active:scale-95 flex items-center gap-3 mx-auto">
