--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
 
     <div id="start-screen" class="fixed inset-0 flex items-center justify-center">
         <div class="text-center p-12 max-w-lg">
-            <div class="w-32 h-32 flex items-center justify-center">
-                <img src="face.png" alt="横顔" class="max-w-full max-h-full object-contain">
+           <div class="w-48 h-48 mx-auto mb-8 rounded-full overflow-hidden border-4 border-emerald-100 shadow-sm flex items-center justify-center bg-white">
+               <img src="face.png" alt="横顔" class="w-full h-full object-cover">
+</div>
 </div>
             <h1 class="text-3xl font-black mb-4 text-slate-800">ピアッシング後の<br>お手入れガイド</h1>
             <p class="mb-10 text-slate-500 text-lg leading-relaxed">正しくケアを続けることで、<br>きれいなピアスホールが完成します。</p>
