--- a/index.html
+++ b/index.html
@@ -258,30 +258,33 @@
 
         <!-- スライド5: シャワーでの洗浄 -->
         <div class="slide" data-duration="11000" data-text="シャワーの際は、ボディソープをよく泡立て、耳をやさしく洗ってください。その後、泡が残らないようしっかり洗い流しましょう。そのときにピアスを前後に動かしながらシャワーをかけると、ホール内部の汚れも落ちやすくなります。">
-            <div class="card">
-                <div class="slide-label">
-                    <span class="slide-label-text">毎日のお手入れ（シャワー編）</span>
+    <div class="card">
+        <div class="slide-label">
+            <span class="slide-label-text">毎日のお手入れ（シャワー編）</span>
+        </div>
+        <div class="content-main">
+            <div class="flex items-center gap-12">
+                <div class="w-1/3 text-center">
+                    <div class="mb-4 rounded-3xl overflow-hidden border border-slate-100 shadow-sm bg-white aspect-square flex items-center justify-center">
+                        <img src="shower.png" alt="シャワーでの洗浄" class="w-full h-full object-cover">
+                    </div>
+                    <p class="font-bold text-slate-400">シャワーで洗い流す</p>
                 </div>
-                <div class="content-main">
-                    <div class="flex items-center gap-12">
-                        <div class="w-1/3 text-center">
-                            <div class="text-9xl mb-4">🚿</div>
-                            <p class="font-bold text-slate-400">シャワーで洗い流す</p>
-                        </div>
-                        <div class="w-2/3 space-y-6">
-                            <div class="flex items-start gap-4 p-5 bg-emerald-50 rounded-2xl">
-                                <div class="w-8 h-8 bg-emerald-600 text-white rounded-full flex items-center justify-center font-bold flex-shrink-0">1</div>
-                                <p class="text-xl font-bold text-slate-700">泡立てた石鹸で、<span class="text-emerald-700">なでるように洗う</span></p>
-                            </div>
-                            <div class="flex items-start gap-4 p-5 bg-emerald-50 rounded-2xl">
-                                <div class="w-8 h-8 bg-emerald-600 text-white rounded-full flex items-center justify-center font-bold flex-shrink-0">2</div>
-                                <p class="text-xl font-bold text-slate-700">ピアスを<span class="text-emerald-700 underline underline-offset-4">動かしながら</span>流す</p>
-                            </div>
-                        </div>
+                
+                <div class="w-2/3 space-y-6">
+                    <div class="flex items-start gap-4 p-5 bg-emerald-50 rounded-2xl">
+                        <div class="w-8 h-8 bg-emerald-600 text-white rounded-full flex items-center justify-center font-bold flex-shrink-0">1</div>
+                        <p class="text-xl font-bold text-slate-700">泡立てた石鹸で、<span class="text-emerald-700">なでるように洗う</span></p>
+                    </div>
+                    <div class="flex items-start gap-4 p-5 bg-emerald-50 rounded-2xl">
+                        <div class="w-8 h-8 bg-emerald-600 text-white rounded-full flex items-center justify-center font-bold flex-shrink-0">2</div>
+                        <p class="text-xl font-bold text-slate-700">ピアスを<span class="text-emerald-700 underline underline-offset-4">動かしながら</span>流す</p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
         <!-- スライド6: 毎日のお手入れ（薬の塗り方編） -->
         <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、ピアスホールの前後に薬を塗って、ピアスをゆっくり前後に動かして、薬をなじませてください。">
