--- a/index.html
+++ b/index.html
@@ -190,23 +190,29 @@
         </div>
 
         <!-- スライド2: 当日の注意点は？ -->
-        <div class="slide" data-duration="8000" data-text="当日の注意点です。ピアスを開けた当日は、ピアスホールを刺激しないように、パーマやプールは控えてください。">
+       <div class="slide" data-duration="8000" data-text="当日の注意点です。ピアスを開けた当日は、ピアスホールを刺激しないように、パーマやプールは控えてください。">
             <div class="card">
                 <div class="slide-label">
                     <span class="slide-label-text">当日の注意点は？</span>
                 </div>
-                <div class="content-main">
-                    <div class="flex items-center justify-around">
+                <div class="content-main items-center text-center">
+                    <div class="mb-8 max-w-2xl mx-auto rounded-3xl overflow-hidden border border-slate-100 shadow-sm bg-white p-4">
+                        <img src="NG.png" alt="パーマとプールは禁止" class="w-full h-auto object-contain">
+                    </div>
+            
+                    <div class="flex justify-center gap-12 mt-4">
                         <div class="text-center">
-                            <div class="text-7xl mb-6">💇‍♀️</div>
-                            <p class="text-2xl font-bold text-slate-700">パーマ</p>
-                            <span class="mt-4 inline-block px-5 py-2 bg-slate-100 text-slate-500 rounded-full font-bold text-lg">お控えください</span>
+                            <p class="text-3xl font-black text-slate-700">パーマ</p>
                         </div>
                         <div class="text-center">
-                            <div class="text-7xl mb-6">🏊‍♂️</div>
-                            <p class="text-2xl font-bold text-slate-700">プール</p>
-                            <span class="mt-4 inline-block px-5 py-2 bg-slate-100 text-slate-500 rounded-full font-bold text-lg">お控えください</span>
+                            <p class="text-3xl font-black text-slate-700">プール</p>
                         </div>
+                    </div>
+            
+                    <div class="mt-8">
+                        <span class="inline-block px-10 py-4 bg-rose-50 text-rose-600 rounded-full font-black text-2xl border border-rose-100 shadow-sm">
+                    当日はお控えください
+                        </span>
                     </div>
                 </div>
             </div>
