--- a/index.html
+++ b/index.html
@@ -363,73 +363,24 @@
         let currentSlideIndex = 0;
 
         async function speak(text) {
-            try {
+            return new Promise(resolve => {
+                // 字幕を表示
                 subtitleArea.innerText = text;
                 subtitleArea.classList.add('visible');
 
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-tts:generateContent?key=${apiKey}`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        contents: [{ parts: [{ text: `明るく落ち着いたトーンの女性スタッフの声で、ゆっくり丁寧に読み上げて: ${text}` }] }],
-                        generationConfig: {
-                            responseModalities: ["AUDIO"],
-                            speechConfig: {
-                                voiceConfig: { prebuiltVoiceConfig: { voiceName: "Aoede" } }
-                            }
-                        }
-                    })
-                });
-                
-                const data = await response.json();
-                const base64Audio = data.candidates?.[0]?.content?.parts?.[0]?.inlineData?.data;
-                
-                if (base64Audio) {
-                    const audioBlob = base64ToWav(base64Audio, 24000);
-                    const audioUrl = URL.createObjectURL(audioBlob);
-                    const audio = new Audio(audioUrl);
-                    return new Promise(resolve => {
-                        audio.onended = () => {
-                            subtitleArea.classList.remove('visible');
-                            resolve();
-                        };
-                        audio.play();
-                    });
-                }
-            } catch (e) {
-                console.error("Audio error", e);
-                return new Promise(resolve => setTimeout(resolve, 3000));
-            }
-        }
+                // 音声合成の準備
+                window.speechSynthesis.cancel(); // 前の音声を止める
+                const uttr = new SpeechSynthesisUtterance(text);
+                uttr.lang = "ja-JP";
+                uttr.rate = 1.1; 
 
-        function base64ToWav(base64, sampleRate) {
-            const binaryString = atob(base64);
-            const len = binaryString.length;
-            const bytes = new Int16Array(len / 2);
-            for (let i = 0; i < len; i += 2) {
-                bytes[i / 2] = (binaryString.charCodeAt(i + 1) << 8) | binaryString.charCodeAt(i);
-            }
-            const wavHeader = new ArrayBuffer(44);
-            const view = new DataView(wavHeader);
-            const writeString = (offset, string) => {
-                for (let i = 0; i < string.length; i++) {
-                    view.setUint8(offset + i, string.charCodeAt(i));
-                }
-            };
-            writeString(0, 'RIFF');
-            view.setUint32(4, 36 + bytes.length * 2, true);
-            writeString(8, 'WAVE');
-            writeString(12, 'fmt ');
-            view.setUint32(16, 16, true);
-            view.setUint16(20, 1, true);
-            view.setUint16(22, 1, true);
-            view.setUint32(24, sampleRate, true);
-            view.setUint32(28, sampleRate * 2, true);
-            view.setUint16(32, 2, true);
-            view.setUint16(34, 16, true);
-            writeString(36, 'data');
-            view.setUint32(40, bytes.length * 2, true);
-            return new Blob([wavHeader, bytes], { type: 'audio/wav' });
+                uttr.onend = () => {
+                    subtitleArea.classList.remove('visible');
+                    resolve();
+                };
+
+                window.speechSynthesis.speak(uttr);
+            });
         }
 
         async function runSlides() {
