--- a/index.html
+++ b/index.html
@@ -156,4 +156,190 @@
                 <div class="mb-8">
                     <svg width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#10b981" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                         <circle cx="12" cy="12" r="10"/><path d="M12 8v8M8 12h8"/>
-                    </svg
+                    </svg>
+                </div>
+                <h2 class="text-4xl font-black text-slate-800 mb-4">正しいアフターケア</h2>
+                <p class="text-xl text-slate-500 font-medium">トラブルを防ぐために大切なことをお伝えします</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="slide" data-duration="8000" 
+         data-text="当日の注意点です。ピアスを開けた当日は、ピアスホールを刺激しないように、パーマやプールは控えてください。" 
+         data-voice="とうじつの、ちゅういてんです。ピアスをあけた、とうじつは、ピアスホールを、しげきしないように、パーマや、プールは、ひかえてください。">
+        <div class="card">
+            <div class="slide-label"><span class="slide-label-text">当日の注意点は？</span></div>
+            <div class="content-main items-center text-center">
+                <div class="mb-8 max-w-2xl mx-auto rounded-3xl overflow-hidden border border-slate-100 shadow-sm bg-white p-4">
+                    <img src="NG.png" alt="パーマとプールは禁止" class="w-full h-auto object-contain">
+                </div>
+                <div class="flex justify-center gap-12 mt-4">
+                    <p class="text-3xl font-black text-slate-700">パーマ</p>
+                    <p class="text-3xl font-black text-slate-700">プール</p>
+                </div>
+                <div class="mt-8">
+                    <span class="inline-block px-10 py-4 bg-rose-50 text-rose-600 rounded-full font-black text-2xl border border-rose-100 shadow-sm">当日はお控えください</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slide" data-duration="10000" 
+         data-text="処方された内服薬を、1日3回、毎食後に、5日間飲み切ってください。" 
+         data-voice="しょほうされた、ないふく・やくを、いちにち さんかい。まいしょくごに、ごにちかん、のみきってください。">
+        <div class="card">
+            <div class="slide-label"><span class="slide-label-text">内服薬について</span></div>
+            <div class="content-main">
+                <p class="text-xl text-slate-400 mb-4 font-bold">内服薬をお渡しします</p>
+                <div class="bg-emerald-50/50 rounded-3xl p-10 border border-emerald-100 text-center">
+                    <div class="text-6xl font-black text-emerald-800 mb-4">1日 3回 × 5日間</div>
+                    <p class="text-xl font-bold text-slate-600">毎食後、最後まで飲み切ってください</p>
+                </div>
+                <div class="mt-8 flex items-center gap-3 text-rose-500 font-bold bg-rose-50 p-4 rounded-xl">
+                    抗生物質に副作用のある方は、必ずお申し出ください
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slide" data-duration="8000" 
+         data-text="お渡しする外用薬は、毎日、お風呂上がりに、4週間継続して使用してください。" 
+         data-voice="おわたしする、がいよう・やくは、まいにち、おふろあがりに、よんしゅうかん、けいぞくして、つかってください。">
+        <div class="card">
+            <div class="slide-label"><span class="slide-label-text">外用薬について</span></div>
+            <div class="content-main text-center">
+                <div class="flex items-center justify-between bg-slate-50 p-12 rounded-3xl border border-slate-100">
+                    <div class="text-left">
+                        <h3 class="text-2xl font-bold text-slate-500 mb-2">フシジンレオ軟膏</h3>
+                        <p class="text-4xl font-black text-slate-800">入浴後に毎日塗布してください</p>
+                    </div>
+                    <div class="w-32 h-32"><img src="ointment.png" alt="外用薬" class="object-contain"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slide" data-duration="11000" 
+         data-text="シャワーの際は、ピアスを前後に動かしながら、ホール内部の汚れも洗い流しましょう。" 
+         data-voice="シャワーのさいは、ピアスを、ぜんごに、うごかしながら、ホール・ないぶの、よごれも、あらいながしましょう。">
+        <div class="card">
+            <div class="slide-label"><span class="slide-label-text">毎日のお手入れ（シャワー編）</span></div>
+            <div class="content-main flex-row gap-12">
+                <div class="w-1/3 rounded-3xl overflow-hidden border border-slate-100 shadow-sm bg-white aspect-square">
+                    <img src="shower.png" class="w-full h-full object-cover">
+                </div>
+                <div class="w-2/3 space-y-6">
+                    <div class="p-5 bg-emerald-50 rounded-2xl text-xl font-bold text-slate-700">泡立てた石鹸でなでるように洗う</div>
+                    <div class="p-5 bg-emerald-50 rounded-2xl text-xl font-bold text-slate-700">ピアスを動かしながら流す</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slide" data-duration="12000" 
+         data-text="お風呂上がりに、綿棒で外用薬をピアスホールの前後に塗り、ゆっくり前後に動かしてなじませてください。" 
+         data-voice="おふろあがりに、めんぼうで、がいよう・やくを、ピアスホールの、ぜんごにぬり、ゆっくり、ぜんごにうごかして、なじませてください。">
+        <div class="card">
+            <div class="slide-label"><span class="slide-label-text">毎日のお手入れ（薬の塗り方編）</span></div>
+            <div class="content-main text-center items-center">
+                <p class="text-3xl font-black">薬を塗ってから前後させる</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="slide" data-duration="7000" 
+         data-text="ファーストピアスは、ホールが完成するまで6週間は外さないでください。" 
+         data-voice="ファースト・ピアスは、ホールが、かんせいするまで、ろく・しゅうかんは、はずさないでください。">
+        <div class="card items-center justify-center text-center">
+            <div class="text-9xl font-black text-emerald-600 mb-6">6週間</div>
+            <p class="text-3xl font-black text-slate-800">外さずに過ごしてください</p>
+        </div>
+    </div>
+
+    <div class="slide" data-duration="8000" 
+         data-text="もし赤みや痛み、腫れなどの異常を感じた場合は、早めに受診してください。" 
+         data-voice="もし、あかみや、いたみ、はれなどの、いじょうをかんじたばあいは、はやめに、じゅしんしてください。おつかれさまでした。">
+        <div class="card items-center justify-center">
+            <div class="w-full bg-rose-50 p-10 rounded-3xl text-center">
+                <p class="text-2xl text-rose-600 font-bold mb-4">強い痛み・腫れ・膿み</p>
+                <p class="text-3xl font-black text-emerald-800">ご視聴ありがとうございました</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="progress-bar-container"><div id="progress-fill" class="progress-fill"></div></div>
+</div>
+
+<script>
+    const slides = document.querySelectorAll('.slide');
+    const progressFill = document.getElementById('progress-fill');
+    const subtitleArea = document.getElementById('subtitle-area');
+    const startScreen = document.getElementById('start-screen');
+    const playButton = document.getElementById('play-button');
+    let currentSlideIndex = 0;
+
+    // 音声再生関数：字幕（漢字）と音声（ひらがな）を別々に受け取る
+    async function speak(displayText, voiceText) {
+        return new Promise(resolve => {
+            subtitleArea.innerText = displayText;
+            subtitleArea.classList.add('visible');
+
+            window.speechSynthesis.cancel();
+            const uttr = new SpeechSynthesisUtterance(voiceText);
+            
+            const voices = window.speechSynthesis.getVoices();
+            const jpVoice = voices.find(v => (v.name.includes('Google') || v.name.includes('Microsoft')) && v.lang === 'ja-JP') || 
+                            voices.find(v => v.lang === 'ja-JP');
+
+            if (jpVoice) { uttr.voice = jpVoice; }
+            uttr.lang = "ja-JP";
+            uttr.rate = 0.95; // 少しゆっくりめに
+            uttr.pitch = 1.1; // 明るい声に
+
+            uttr.onend = () => {
+                subtitleArea.classList.remove('visible');
+                resolve();
+            };
+            window.speechSynthesis.speak(uttr);
+        });
+    }
+
+    async function runSlides() {
+        if (currentSlideIndex >= slides.length) {
+            startScreen.style.display = 'flex';
+            startScreen.innerHTML = '<div class="text-center p-12 bg-white rounded-[40px] shadow-xl"><h2 class="text-3xl font-black mb-4 text-emerald-900">ご視聴ありがとうございました</h2><button onclick="location.reload()" class="bg-emerald-600 text-white px-10 py-4 rounded-full font-bold">最初から見る</button></div>';
+            return;
+        }
+
+        slides.forEach(s => s.classList.remove('active'));
+        const currentSlide = slides[currentSlideIndex];
+        currentSlide.classList.add('active');
+
+        const duration = parseInt(currentSlide.dataset.duration);
+        const displayText = currentSlide.dataset.text;
+        const voiceText = currentSlide.dataset.voice || displayText; // voiceがない場合はtextを使う
+
+        progressFill.style.transition = 'none';
+        progressFill.style.width = '0%';
+        setTimeout(() => {
+            progressFill.style.transition = `width ${duration}ms linear`;
+            progressFill.style.width = '100%';
+        }, 10);
+
+        await new Promise(resolve => setTimeout(resolve, 2000));
+        await speak(displayText, voiceText);
+
+        setTimeout(() => {
+            currentSlideIndex++;
+            runSlides();
+        }, 1000); 
+    }
+
+    window.speechSynthesis.onvoiceschanged = () => { window.speechSynthesis.getVoices(); };
+    playButton.addEventListener('click', () => {
+        startScreen.style.display = 'none';
+        runSlides();
+    });
+</script>
+</body>
+</html>
