--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
 
         <!-- スライド5: シャワーでの洗浄 -->
-        <div class="slide" data-duration="11000" data-text="シャワーの際は、ボディソープをよく泡立て、耳をやさしく洗ってください。その後、泡が残らないようしっかり洗い流しましょう。そのときにピアスを前後に動かしながらシャワーをかけると、ホール内部の汚れも落ちやすくなります。">
+        <div class="slide" data-duration="11000" data-text="シャワーの際は、ボディソープをよく泡立て、耳をやさしく洗ってください。その後、泡が残らないようしっかり流しましょう。そのときにピアスを前後に動かしながらシャワーをかけると、ホール内部の汚れも落ちやすくなります。">
     <div class="card">
         <div class="slide-label">
             <span class="slide-label-text">毎日のお手入れ（シャワー編）</span>
@@ -293,7 +293,7 @@
 </div>
 
         <!-- スライド6: 毎日のお手入れ（薬の塗り方編） -->
-        <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、ピアスホールの前後に薬を塗って、ピアスをゆっくり前後に動かして、薬をなじませてください。">
+        <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒にぬり薬を少しとり、耳のまえ側とうしろ側、両方のピアスホールに薬を塗って、ピアスをゆっくり前後に動かして、薬をなじませてください。">
             <div class="card">
                 <div class="slide-label">
                     <span class="slide-label-text">毎日のお手入れ（薬の塗り方編）</span>
@@ -331,7 +331,7 @@
         </div>
 
         <!-- スライド8: 受診の目安 -->
-        <div class="slide" data-duration="8000" data-text="もし赤みや痛み、腫れなどの異常を感じた場合は、早めに受診してください。お疲れ様でした。">
+        <div class="slide" data-duration="8000" data-text="もし赤みや痛み、腫れなどの異常を感じた場合は、早めに受診してください。">
             <div class="card">
                 <div class="slide-label">
                     <span class="slide-label-text">異常を感じたら・・・</span>
@@ -341,7 +341,7 @@
                         <div class="flex justify-center gap-8 text-rose-600 mb-4 font-bold text-2xl">
                             <span>強い痛み</span><span>・</span><span>腫れ</span><span>・</span><span>膿み</span>
                         </div>
-                        <p class="text-lg text-slate-600">我慢せず、お早めに当院へご連絡ください</p>
+                        <p class="text-lg text-slate-600">我慢せず、お早めに受診してください</p>
                     </div>
                     <p class="text-3xl font-black text-emerald-800">ご視聴ありがとうございました</p>
                 </div>
