--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
 
         <!-- スライド3: 内服薬 -->
-        <div class="slide" data-duration="10000" data-text="処方された内服薬を1日3回、毎食後に、5日間、飲み切ってください。<br>なお、抗生物質を飲んで、体調が悪くなったことがある方は必ずスタッフに相談してください。">
+        <div class="slide" data-duration="10000" data-text="処方された内服薬を1日3回、毎食後に、5日間、飲み切ってください。なお、抗生物質を飲んで、体調が悪くなったことがある方は必ずスタッフに相談してください。">
             <div class="card">
                 <div class="slide-label">
                     <span class="slide-label-text">内服薬について</span>
@@ -263,7 +263,7 @@
         </div>
 
         <!-- スライド5: シャワーでの洗浄 -->
-        <div class="slide" data-duration="11000" data-text="シャワーの際は、ボディソープをよく泡立て、耳をやさしく洗ってください。<br>その後、泡が残らないようしっかり流しましょう。<br>そのときにピアスを前後に動かしながらシャワーをかけると、ホール内部の汚れも落ちやすくなります。">
+        <div class="slide" data-duration="11000" data-text="シャワーの際は、ボディソープをよく泡立て、耳をやさしく洗ってください。その後、泡が残らないようしっかり流しましょう。そのときにピアスを前後に動かしながらシャワーをかけると、ホール内部の汚れも落ちやすくなります。">
     <div class="card">
         <div class="slide-label">
             <span class="slide-label-text">毎日のお手入れ（シャワー編）</span>
@@ -293,7 +293,7 @@
 </div>
 
         <!-- スライド6: 毎日のお手入れ（薬の塗り方編） -->
-        <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、<br>耳のまえ側とうしろ側、両方のピアスホールに薬を塗って、<br>ピアスをゆっくり前後に動かして、薬をなじませてください。">
+        <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、耳のまえ側とうしろ側、両方のピアスホールに薬を塗って、<br>ピアスをゆっくり前後に動かして、薬をなじませてください。">
             <div class="card">
                 <div class="slide-label">
                     <span class="slide-label-text">毎日のお手入れ（薬の塗り方編）</span>
