--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 </div>
 
         <!-- スライド6: 毎日のお手入れ（薬の塗り方編） -->
-        <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、耳のまえ側とうしろ側、両方のピアスホールに薬を塗って、<br>ピアスをゆっくり前後に動かして、薬をなじませてください。">
+        <div class="slide" data-duration="12000" data-text="お風呂上がりに、タオルでやさしくピアスホールの水気をふいて、綿棒に外用薬を少しとり、耳のまえ側とうしろ側、両方のピアスホールに薬を塗って、ピアスをゆっくり前後に動かして、薬をなじませてください。">
             <div class="card">
                 <div class="slide-label">
                     <span class="slide-label-text">毎日のお手入れ（薬の塗り方編）</span>
@@ -377,8 +377,9 @@
             .replace(/ボディソープ/g, "ボディーソープ")
             .replace(/4週間/g, "よんしゅうかん")
             .replace(/6週間/g, "ろくしゅうかん")
-            .replace(/綿棒/g, "めんぼう")
+            .replace(/綿棒/g, "メンボー")
             .replace(/塗布/g, "とふ");
+            .replace(/ある方は/g, "あるかたは");
 
         window.speechSynthesis.cancel();
         
