--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             .replace(/4週間/g, "よんしゅうかん")
             .replace(/6週間/g, "ろくしゅうかん")
             .replace(/綿棒/g, "メンボー")
-            .replace(/塗布/g, "とふ");
+            .replace(/塗布/g, "とふ")
             .replace(/ある方は/g, "あるかたは");
 
         window.speechSynthesis.cancel();
