--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <p class="text-xl font-bold text-slate-600">毎食後、最後まで飲み切ってください</p>
                     </div>
 
-                    <!-- イラストの追加 --> <div class="mt-6 flex justify-center"> <img src="/attachments/2BmCCXQmQRnRXeNzGUguk.png" alt="内服薬を飲むイラスト" class="max-w-xs rounded-lg shadow-md"> </div>
+                    <!-- イラストの追加 --> <div class="mt-6 flex justify-center"> <img src="medication.png" alt="内服薬を飲むイラスト" class="max-w-xs rounded-lg shadow-md"> </div>
                     
                     <div class="mt-8 flex items-center gap-3 text-rose-500 font-bold bg-rose-50 p-4 rounded-xl">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 9v4m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 17c-.77 1.333.192 3 1.732 3z"/></svg>
