--- a/index.html
+++ b/index.html
@@ -325,10 +325,15 @@
                     <div class="p-6 bg-slate-50 rounded-2xl text-center border border-dashed border-slate-300">
                         <p class="text-xl font-bold text-slate-500 italic">お薬をホールの中に届けるのがポイントです</p>
                     </div>
+
+                    <!-- イラストの追加 -->
+                    <div class="flex justify-center mt-4"> 
+                        <img src="care.png" alt="薬の塗り方イラスト" class="w-56 h-auto rounded-lg shadow-md">
+                    </div> 
                 </div>
             </div>
         </div>
-
+              
         <!-- スライド7: 6週間 -->
         <div class="slide" data-duration="7000" data-text="ファーストピアスは、ホールが完成するまで6週間は外さないでください。">
             <div class="card items-center justify-center text-center">
