--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
 
         　<!-- スライド3: 内服薬 -->
-        <div class="slide" data-duration="10000" data-text="処方された内服薬を1日3回、毎食後に、5日間、飲み切ってください。<br>なお、抗生物質を飲んで、体調が悪くなったことがある方は必ずスタッフに相談してください。">
+        <div class="slide" data-duration="10000" data-text="処方された内服薬を1日3回、毎食後に、5日間、飲み切ってください。なお、抗生物質を飲んで、体調が悪くなったことがある方は必ずスタッフに相談してください。">
             <div class="card">
                 <div class="slide-label">
                     <span class="slide-label-text">内服薬について</span>
